--- a/connection/templates/connection/connection.html
+++ b/connection/templates/connection/connection.html
@@ -4,7 +4,7 @@
 <p><strong>Utilisateur inconnu ou mauvais de mot de passe.</strong></p>
 {% endif %}
 
-{% if user.is_authenticated %}
+{% if user.is_authenticated and user.is_active%}
 Vous êtes connecté, {{ user.username }} !<p><a href="{% url "gestionDressing.views.accueil" %}">Continuer vers l'accueil</a></p>
 {% else %}
 <form method="post" action=".">
