--- a/dressingManage/templates/dressingManage/addTheme.html
+++ b/dressingManage/templates/dressingManage/addTheme.html
@@ -4,7 +4,7 @@
 <p><strong>Formulaire non rempli.</strong></p>
 {% endif %}
 
-<form method="post" action="{% url "dressingManage.views.addTheme" %}">
+<form method="post" action="{% url "addTheme" %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Ajouter" />
