--- a/dressingManage/templates/dressingManage/editClothe.html
+++ b/dressingManage/templates/dressingManage/editClothe.html
@@ -4,7 +4,7 @@
 <p><strong>Formulaire non rempli.</strong></p>
 {% endif %}
 
-<form enctype="multipart/form-data" method="post" action="{% url "dressingManage.views.editClothe" idC %}">
+<form enctype="multipart/form-data" method="post" action="{% url "editClothe" idC %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Ajouter" />
