--- a/dressingManage/templates/dressingManage/getTheme.html
+++ b/dressingManage/templates/dressingManage/getTheme.html
@@ -4,7 +4,7 @@
 <p><strong>Formulaire non rempli.</strong></p>
 {% endif %}
 
-<form method="post" action="{% url "dressingManage.views.getTheme" %}">
+<form method="post" action="{% url "getTheme" %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="get" />
