--- a/userManage/templates/userManage/add.html
+++ b/userManage/templates/userManage/add.html
@@ -4,7 +4,7 @@
 <p><strong>Formulaire non rempli.</strong></p>
 {% endif %}
 
-<form method="post" action="{% url "userManage.views.add" %}">
+<form method="post" action="{% url "add" %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Ajouter" />
